syntax = "proto3";
package transfers;

message PcBuild {
  string uuid = 1;
  string displayName = 2;
  string description = 3;
  string username = 4;
  repeated string cpuIds = 5;
  repeated string motherboardIds = 6;
  repeated string storageIds = 7;
  repeated string memoryIds = 8;
  repeated string videoCardIds = 9;
  repeated string powerSupplyIds = 10;
  int64 creationDate = 11;
  int64 lastUpdateDate = 12;
}
